--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "lottie-react": "^2.4.0",
     "next": "^14.0.4",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
