--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^2.12.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
@@ -22,6 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
